@@ -1,11 +1,12 @@
 /*
  * Javassist, a Java-bytecode translator toolkit.
- * Copyright (C) 1999-2007 Shigeru Chiba. All Rights Reserved.
+ * Copyright (C) 1999- Shigeru Chiba. All Rights Reserved.
  *
  * The contents of this file are subject to the Mozilla Public License Version
  * 1.1 (the "License"); you may not use this file except in compliance with
  * the License.  Alternatively, the contents of this file may be used under
- * the terms of the GNU Lesser General Public License Version 2.1 or later.
+ * the terms of the GNU Lesser General Public License Version 2.1 or later,
+ * or the Apache License Version 2.0.
  *
  * Software distributed under the License is distributed on an "AS IS" basis,
  * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
@@ -15,13 +16,23 @@
 
 package javassist;
 
-import javassist.bytecode.*;
+import java.util.List;
+
+import javassist.bytecode.AccessFlag;
+import javassist.bytecode.AnnotationsAttribute;
+import javassist.bytecode.AttributeInfo;
+import javassist.bytecode.Bytecode;
+import javassist.bytecode.ClassFile;
+import javassist.bytecode.ConstPool;
+import javassist.bytecode.Descriptor;
+import javassist.bytecode.FieldInfo;
+import javassist.bytecode.SignatureAttribute;
+import javassist.compiler.CompileError;
 import javassist.compiler.Javac;
 import javassist.compiler.SymbolTable;
-import javassist.compiler.CompileError;
 import javassist.compiler.ast.ASTree;
-import javassist.compiler.ast.IntConst;
 import javassist.compiler.ast.DoubleConst;
+import javassist.compiler.ast.IntConst;
 import javassist.compiler.ast.StringL;
 
 /**
@@ -82,15 +93,12 @@ public class CtField extends CtMember {
     {
         this(src.fieldInfo.getDescriptor(), src.fieldInfo.getName(),
              declaring);
-        java.util.ListIterator iterator
-            = src.fieldInfo.getAttributes().listIterator();
         FieldInfo fi = fieldInfo;
         fi.setAccessFlags(src.fieldInfo.getAccessFlags());
         ConstPool cp = fi.getConstPool();
-        while (iterator.hasNext()) {
-            AttributeInfo ainfo = (AttributeInfo)iterator.next();
+        List<AttributeInfo> attributes = src.fieldInfo.getAttributes();
+        for (AttributeInfo ainfo : attributes) 
             fi.addAttribute(ainfo.copy(cp, null));
-        }
     }
 
     private CtField(String typeDesc, String name, CtClass clazz)
@@ -113,11 +121,13 @@ public class CtField extends CtMember {
     /**
      * Returns a String representation of the object.
      */
+    @Override
     public String toString() {
         return getDeclaringClass().getName() + "." + getName()
                + ":" + fieldInfo.getDescriptor();
     }
 
+    @Override
     protected void extendToString(StringBuffer buffer) {
         buffer.append(' ');
         buffer.append(getName());
@@ -125,27 +135,24 @@ public class CtField extends CtMember {
         buffer.append(fieldInfo.getDescriptor());
     }
 
-    /* Javac.CtFieldWithInit overrides.
-     */
+    /* Javac.CtFieldWithInit overrides. */
     protected ASTree getInitAST() { return null; }
 
-    /* Called by CtClassType.addField().
-     */
+    /* Called by CtClassType.addField(). */
     Initializer getInit() {
         ASTree tree = getInitAST();
         if (tree == null)
             return null;
-        else
-            return Initializer.byExpr(tree);
+        return Initializer.byExpr(tree);
     }
 
     /**
      * Compiles the given source code and creates a field.
      * Examples of the source code are:
      *
-     * <ul><pre>
+     * <pre>
      * "public String name;"
-     * "public int k = 3;"</pre></ul>
+     * "public int k = 3;"</pre>
      *
      * <p>Note that the source code ends with <code>';'</code>
      * (semicolon).
@@ -201,6 +208,7 @@ public class CtField extends CtMember {
     /**
      * Returns the class declaring the field.
      */
+    @Override
     public CtClass getDeclaringClass() {
         // this is redundant but for javadoc.
         return super.getDeclaringClass();
@@ -209,6 +217,7 @@ public class CtField extends CtMember {
     /**
      * Returns the name of the field.
      */
+    @Override
     public String getName() {
         return fieldInfo.getName();
     }
@@ -226,6 +235,7 @@ public class CtField extends CtMember {
      *
      * @see Modifier
      */
+    @Override
     public int getModifiers() {
         return AccessFlag.toModifier(fieldInfo.getAccessFlags());
     }
@@ -235,25 +245,27 @@ public class CtField extends CtMember {
      *
      * @see Modifier
      */
+    @Override
     public void setModifiers(int mod) {
         declaringClass.checkModify();
         fieldInfo.setAccessFlags(AccessFlag.of(mod));
     }
 
     /**
-     * Returns true if the class has the specified annotation class.
+     * Returns true if the class has the specified annotation type.
      *
-     * @param clz the annotation class.
+     * @param typeName      the name of annotation type.
      * @return <code>true</code> if the annotation is found, otherwise <code>false</code>.
-     * @since 3.11
+     * @since 3.21
      */
-    public boolean hasAnnotation(Class clz) {
+    @Override
+    public boolean hasAnnotation(String typeName) {
         FieldInfo fi = getFieldInfo2();
         AnnotationsAttribute ainfo = (AnnotationsAttribute)
                     fi.getAttribute(AnnotationsAttribute.invisibleTag);  
         AnnotationsAttribute ainfo2 = (AnnotationsAttribute)
                     fi.getAttribute(AnnotationsAttribute.visibleTag);  
-        return CtClassType.hasAnnotationType(clz, getDeclaringClass().getClassPool(),
+        return CtClassType.hasAnnotationType(typeName, getDeclaringClass().getClassPool(),
                                              ainfo, ainfo2);
     }
 
@@ -268,7 +280,8 @@ public class CtField extends CtMember {
      * @return the annotation if found, otherwise <code>null</code>.
      * @since 3.11
      */
-    public Object getAnnotation(Class clz) throws ClassNotFoundException {
+    @Override
+    public Object getAnnotation(Class<?> clz) throws ClassNotFoundException {
         FieldInfo fi = getFieldInfo2();
         AnnotationsAttribute ainfo = (AnnotationsAttribute)
                     fi.getAttribute(AnnotationsAttribute.invisibleTag);  
@@ -285,6 +298,7 @@ public class CtField extends CtMember {
      * @see #getAvailableAnnotations()
      * @since 3.1
      */
+    @Override
     public Object[] getAnnotations() throws ClassNotFoundException {
         return getAnnotations(false);
     }
@@ -298,6 +312,7 @@ public class CtField extends CtMember {
      * @see #getAnnotations()
      * @since 3.3
      */
+    @Override
     public Object[] getAvailableAnnotations(){
         try {
             return getAnnotations(true);
@@ -326,17 +341,44 @@ public class CtField extends CtMember {
      *
      * <p>Note that the returned string is not the type signature
      * contained in the <code>SignatureAttirbute</code>.  It is
-     * a descriptor.  To obtain a type signature, call the following
-     * methods:
-     * 
-     * <ul><pre>getFieldInfo().getAttribute(SignatureAttribute.tag)
-     * </pre></ul>
+     * a descriptor.
      *
      * @see javassist.bytecode.Descriptor
-     * @see javassist.bytecode.SignatureAttribute
+     * @see #getGenericSignature()
      */
+    @Override
     public String getSignature() {
         return fieldInfo.getDescriptor();
+    }
+
+    /**
+     * Returns the generic signature of the field.
+     * It represents a type including type variables.
+     *
+     * @see SignatureAttribute#toFieldSignature(String)
+     * @since 3.17
+     */
+    @Override
+    public String getGenericSignature() {
+        SignatureAttribute sa
+            = (SignatureAttribute)fieldInfo.getAttribute(SignatureAttribute.tag);
+        return sa == null ? null : sa.getSignature();
+    }
+
+    /**
+     * Set the generic signature of the field.
+     * It represents a type including type variables.
+     * See {@link javassist.CtClass#setGenericSignature(String)}
+     * for a code sample.
+     *
+     * @param sig       a new generic signature.
+     * @see javassist.bytecode.SignatureAttribute.ObjectType#encode()
+     * @since 3.17
+     */
+    @Override
+    public void setGenericSignature(String sig) {
+        declaringClass.checkModify();
+        fieldInfo.addAttribute(new SignatureAttribute(fieldInfo.getConstPool(), sig));
     }
 
     /**
@@ -349,6 +391,17 @@ public class CtField extends CtMember {
 
     /**
      * Sets the type of the field.
+     *
+     * <p>This method does not automatically update method bodies that access
+     * this field.  They have to be explicitly updated.  For example,
+     * if some method contains an expression {@code t.value} and the type
+     * of the variable {@code t} is changed by {@link #setType(CtClass)}
+     * from {@code int} to {@code double}, then {@code t.value} has to be modified
+     * as well since the bytecode of {@code t.value} contains the type information.
+     * </p>
+     *
+     * @see CodeConverter
+     * @see javassist.expr.ExprEditor
      */
     public void setType(CtClass clazz) {
         declaringClass.checkModify();
@@ -380,18 +433,17 @@ public class CtField extends CtMember {
         ConstPool cp = fieldInfo.getConstPool();
         switch (cp.getTag(index)) {
             case ConstPool.CONST_Long :
-                return new Long(cp.getLongInfo(index));
+                return Long.valueOf(cp.getLongInfo(index));
             case ConstPool.CONST_Float :
-                return new Float(cp.getFloatInfo(index));
+                return Float.valueOf(cp.getFloatInfo(index));
             case ConstPool.CONST_Double :
-                return new Double(cp.getDoubleInfo(index));
+                return Double.valueOf(cp.getDoubleInfo(index));
             case ConstPool.CONST_Integer :
                 int value = cp.getIntegerInfo(index);
                 // "Z" means boolean type.
                 if ("Z".equals(fieldInfo.getDescriptor()))
-                    return new Boolean(value != 0);
-                else
-                    return new Integer(value);
+                    return Boolean.valueOf(value != 0);
+                return Integer.valueOf(value);
             case ConstPool.CONST_String :
                 return cp.getStringInfo(index);
             default :
@@ -411,12 +463,12 @@ public class CtField extends CtMember {
      *
      * @param name              attribute name
      */
+    @Override
     public byte[] getAttribute(String name) {
         AttributeInfo ai = fieldInfo.getAttribute(name);
         if (ai == null)
             return null;
-        else
-            return ai.get();
+        return ai.get();
     }
 
     /**
@@ -429,6 +481,7 @@ public class CtField extends CtMember {
      * @param name      attribute name
      * @param data      attribute value
      */
+    @Override
     public void setAttribute(String name, byte[] data) {
         declaringClass.checkModify();
         fieldInfo.addAttribute(new AttributeInfo(fieldInfo.getConstPool(),
@@ -526,8 +579,7 @@ public class CtField extends CtMember {
          * value of the field.  The constructor of the created object receives
          * the parameter:
          *
-         * <ul><code>Object obj</code> - the object including the field.<br>
-         * </ul>
+         * <p><code>Object obj</code> - the object including the field.
          *
          * <p>If the initialized field is static, then the constructor does
          * not receive any parameters.
@@ -549,10 +601,9 @@ public class CtField extends CtMember {
          * value of the field.  The constructor of the created object receives
          * the parameters:
          *
-         * <ul><code>Object obj</code> - the object including the field.<br>
+         * <p><code>Object obj</code> - the object including the field.<br>
          *     <code>String[] strs</code> - the character strings specified
          *                              by <code>stringParams</code><br>
-         * </ul>
          *
          * <p>If the initialized field is static, then the constructor
          * receives only <code>strs</code>.
@@ -577,11 +628,10 @@ public class CtField extends CtMember {
          * value of the field.  The constructor of the created object receives
          * the parameters:
          *
-         * <ul><code>Object obj</code> - the object including the field.<br>
+         * <p><code>Object obj</code> - the object including the field.<br>
          *     <code>Object[] args</code> - the parameters passed to the
          *                      constructor of the object including the
          *                      filed.
-         * </ul>
          *
          * <p>If the initialized field is static, then the constructor does
          * not receive any parameters.
@@ -606,13 +656,12 @@ public class CtField extends CtMember {
          * value of the field.  The constructor of the created object receives
          * the parameters:
          *
-         * <ul><code>Object obj</code> - the object including the field.<br>
+         * <p><code>Object obj</code> - the object including the field.<br>
          *     <code>String[] strs</code> - the character strings specified
          *                              by <code>stringParams</code><br>
          *     <code>Object[] args</code> - the parameters passed to the
          *                      constructor of the object including the
          *                      filed.
-         * </ul>
          *
          * <p>If the initialized field is static, then the constructor receives
          * only <code>strs</code>.
@@ -637,8 +686,7 @@ public class CtField extends CtMember {
          * value as the initial value of the field.
          * The called method receives the parameters:
          *
-         * <ul><code>Object obj</code> - the object including the field.<br>
-         * </ul>
+         * <p><code>Object obj</code> - the object including the field.
          *
          * <p>If the initialized field is static, then the method does
          * not receive any parameters.
@@ -667,10 +715,9 @@ public class CtField extends CtMember {
          * value as the initial value of the field.  The called method
          * receives the parameters:
          *
-         * <ul><code>Object obj</code> - the object including the field.<br>
+         * <p><code>Object obj</code> - the object including the field.<br>
          *     <code>String[] strs</code> - the character strings specified
          *                              by <code>stringParams</code><br>
-         * </ul>
          *
          * <p>If the initialized field is static, then the method
          * receive only <code>strs</code>.
@@ -702,11 +749,10 @@ public class CtField extends CtMember {
          * value as the initial value of the field.  The called method
          * receives the parameters:
          *
-         * <ul><code>Object obj</code> - the object including the field.<br>
+         * <p><code>Object obj</code> - the object including the field.<br>
          *     <code>Object[] args</code> - the parameters passed to the
          *                      constructor of the object including the
          *                      filed.
-         * </ul>
          *
          * <p>If the initialized field is static, then the method does
          * not receive any parameters.
@@ -735,13 +781,12 @@ public class CtField extends CtMember {
          * value as the initial value of the field.  The called method
          * receives the parameters:
          *
-         * <ul><code>Object obj</code> - the object including the field.<br>
+         * <p><code>Object obj</code> - the object including the field.<br>
          *     <code>String[] strs</code> - the character strings specified
          *                              by <code>stringParams</code><br>
          *     <code>Object[] args</code> - the parameters passed to the
          *                      constructor of the object including the
          *                      filed.
-         * </ul>
          *
          * <p>If the initialized field is static, then the method
          * receive only <code>strs</code>.
@@ -826,6 +871,7 @@ public class CtField extends CtMember {
     static abstract class CodeInitializer0 extends Initializer {
         abstract void compileExpr(Javac drv) throws CompileError;
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -841,6 +887,7 @@ public class CtField extends CtMember {
             }
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -859,9 +906,9 @@ public class CtField extends CtMember {
                 if (tree instanceof IntConst) {
                     long value = ((IntConst)tree).get();
                     if (type == CtClass.doubleType)
-                        return cp.addDoubleInfo((double)value);
+                        return cp.addDoubleInfo(value);
                     else if (type == CtClass.floatType)
-                        return cp.addFloatInfo((float)value);
+                        return cp.addFloatInfo(value);
                     else if (type == CtClass.longType)
                         return cp.addLongInfo(value);
                     else  if (type != CtClass.voidType)
@@ -888,10 +935,12 @@ public class CtField extends CtMember {
 
         CodeInitializer(String expr) { expression = expr; }
 
+        @Override
         void compileExpr(Javac drv) throws CompileError {
             drv.compileExpr(expression);
         }
 
+        @Override
         int getConstantValue(ConstPool cp, CtClass type) {
             try {
                 ASTree t = Javac.parseExpr(expression, new SymbolTable());
@@ -908,10 +957,12 @@ public class CtField extends CtMember {
 
         PtreeInitializer(ASTree expr) { expression = expr; }
 
+        @Override
         void compileExpr(Javac drv) throws CompileError {
             drv.compileExpr(expression);
         }
 
+        @Override
         int getConstantValue(ConstPool cp, CtClass type) {
             return getConstantValue2(cp, type, expression);
         }
@@ -926,6 +977,7 @@ public class CtField extends CtMember {
 
         ParamInitializer() {}
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -937,8 +989,7 @@ public class CtField extends CtMember {
                 code.addPutfield(Bytecode.THIS, name, Descriptor.of(type));
                 return s;       // stack size
             }
-            else
-                return 0;       // do not initialize
+            return 0;       // do not initialize
         }
 
         /**
@@ -970,6 +1021,7 @@ public class CtField extends CtMember {
             return k;
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -991,6 +1043,7 @@ public class CtField extends CtMember {
          * Produces codes in which a new object is created and assigned to
          * the field as the initial value.
          */
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1025,16 +1078,17 @@ public class CtField extends CtMember {
                     return "(Ljava/lang/Object;[Ljava/lang/Object;)V";
                 else
                     return "(Ljava/lang/Object;)V";
-            else
-                if (withConstructorParams)
-                    return desc3;
-                else
-                    return "(Ljava/lang/Object;[Ljava/lang/String;)V";
+
+            if (withConstructorParams)
+                return desc3;
+
+            return "(Ljava/lang/Object;[Ljava/lang/String;)V";
         }
 
         /**
          * Produces codes for a static field.
          */
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -1087,6 +1141,7 @@ public class CtField extends CtMember {
          * Produces codes in which a new object is created and assigned to
          * the field as the initial value.
          */
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1121,16 +1176,17 @@ public class CtField extends CtMember {
                     return "(Ljava/lang/Object;[Ljava/lang/Object;)";
                 else
                     return "(Ljava/lang/Object;)";
-            else
-                if (withConstructorParams)
-                    return desc3;
-                else
-                    return "(Ljava/lang/Object;[Ljava/lang/String;)";
+
+            if (withConstructorParams)
+                return desc3;
+
+            return "(Ljava/lang/Object;[Ljava/lang/String;)";
         }
 
         /**
          * Produces codes for a static field.
          */
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -1156,12 +1212,14 @@ public class CtField extends CtMember {
 
         IntInitializer(int v) { value = v; }
 
+        @Override
         void check(String desc) throws CannotCompileException {
             char c = desc.charAt(0);
             if (c != 'I' && c != 'S' && c != 'B' && c != 'C' && c != 'Z')
                 throw new CannotCompileException("type mismatch");
         }
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1172,6 +1230,7 @@ public class CtField extends CtMember {
             return 2;   // stack size
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -1180,6 +1239,7 @@ public class CtField extends CtMember {
             return 1;   // stack size
         }
 
+        @Override
         int getConstantValue(ConstPool cp, CtClass type) {
             return cp.addIntegerInfo(value);
         }
@@ -1190,11 +1250,13 @@ public class CtField extends CtMember {
 
         LongInitializer(long v) { value = v; }
 
+        @Override
         void check(String desc) throws CannotCompileException {
             if (!desc.equals("J"))
                 throw new CannotCompileException("type mismatch");
         }
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1205,6 +1267,7 @@ public class CtField extends CtMember {
             return 3;   // stack size
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -1213,11 +1276,11 @@ public class CtField extends CtMember {
             return 2;   // stack size
         }
 
+        @Override
         int getConstantValue(ConstPool cp, CtClass type) {
             if (type == CtClass.longType)
                 return cp.addLongInfo(value);
-            else
-                return 0;
+            return 0;
         }
     }
 
@@ -1226,11 +1289,13 @@ public class CtField extends CtMember {
 
         FloatInitializer(float v) { value = v; }
 
+        @Override
         void check(String desc) throws CannotCompileException {
             if (!desc.equals("F"))
                 throw new CannotCompileException("type mismatch");
         }
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1241,6 +1306,7 @@ public class CtField extends CtMember {
             return 3;   // stack size
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -1249,11 +1315,11 @@ public class CtField extends CtMember {
             return 2;   // stack size
         }
 
+        @Override
         int getConstantValue(ConstPool cp, CtClass type) {
             if (type == CtClass.floatType)
                 return cp.addFloatInfo(value);
-            else
-                return 0;
+            return 0;
         }
     }
 
@@ -1262,11 +1328,13 @@ public class CtField extends CtMember {
 
         DoubleInitializer(double v) { value = v; }
 
+        @Override
         void check(String desc) throws CannotCompileException {
             if (!desc.equals("D"))
                 throw new CannotCompileException("type mismatch");
         }
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1277,6 +1345,7 @@ public class CtField extends CtMember {
             return 3;   // stack size
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -1285,11 +1354,11 @@ public class CtField extends CtMember {
             return 2;   // stack size
         }
 
+        @Override
         int getConstantValue(ConstPool cp, CtClass type) {
             if (type == CtClass.doubleType)
                 return cp.addDoubleInfo(value);
-            else
-                return 0;
+            return 0;
         }
     }
 
@@ -1298,6 +1367,7 @@ public class CtField extends CtMember {
 
         StringInitializer(String v) { value = v; }
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1308,6 +1378,7 @@ public class CtField extends CtMember {
             return 2;   // stack size
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -1316,11 +1387,11 @@ public class CtField extends CtMember {
             return 1;   // stack size
         }
 
+        @Override
         int getConstantValue(ConstPool cp, CtClass type) {
             if (type.getName().equals(javaLangString))
                 return cp.addStringInfo(value);
-            else
-                return 0;
+            return 0;
         }
     }
 
@@ -1338,6 +1409,7 @@ public class CtField extends CtMember {
                 code.addAnewarray(type, size);
         }
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1348,6 +1420,7 @@ public class CtField extends CtMember {
             return 2;   // stack size
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
@@ -1363,11 +1436,13 @@ public class CtField extends CtMember {
 
         MultiArrayInitializer(CtClass t, int[] d) { type = t; dim = d; }
 
+        @Override
         void check(String desc) throws CannotCompileException {
             if (desc.charAt(0) != '[')
                 throw new CannotCompileException("type mismatch");
         }
 
+        @Override
         int compile(CtClass type, String name, Bytecode code,
                     CtClass[] parameters, Javac drv)
             throws CannotCompileException
@@ -1378,6 +1453,7 @@ public class CtField extends CtMember {
             return s + 1;       // stack size
         }
 
+        @Override
         int compileIfStatic(CtClass type, String name, Bytecode code,
                             Javac drv) throws CannotCompileException
         {
